Fix #48 - Added missing style sheets and added smart popout to ascot_plugin. Aaand thats a wrap

--- a/public/stylesheets/ascot_plugin.css
+++ b/public/stylesheets/ascot_plugin.css
@@ -13,6 +13,21 @@
   position: relative;
 }
 
+.ascot_overlay_look a {
+  color: #7b7979;
+  text-decoration: none;
+}
+
+.ascot_overlay_look a:active{
+  color: #7b7979;
+  text-decoration: none;
+}
+
+.ascot_overlay_look a:visited {
+  color: #7b7979;
+  text-decoration: none;
+}
+
 .ascot_overlay {
   position:absolute;
   vertical-align: top;
@@ -115,14 +130,12 @@
 }
 
 .ascot_overlay_tag_container .tag_description {
-  position:relative;
+  position: absolute;
   border:1px #323232 solid;
   color:#171717;
   background-color: rgba(244,244,244,.8);
   width:200px;
   text-align:center;
-  margin-top: -7px;
-  margin-left: 7px;
   border-radius:5px;
   z-index: 2;
   -webkit-box-shadow: 0px 0px 6px rgba(50, 50, 50, 0.75);
